Added start to muscle diagram

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,16 @@ body {
 body.d {
   background: rgb(23 23 23);
 }
+
+.muscle-svg {
+  fill: black;
+}
+
+.muscle-svg > g > path:first-child {
+  fill: #d4d4d4;
+}
+
+.muscle-svg:hover > g > path:first-child {
+  fill: #0ea5e9;
+  cursor:pointer;
+}
