--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,16 @@ body.d {
   fill: #0ea5e9;
   cursor:pointer;
 }
+
+.dark .muscle-svg {
+  fill: #6c6c6c;
+}
+
+.dark .muscle-svg > g > path:first-child {
+  fill: #1f1f1f;
+}
+
+.dark .muscle-svg:hover > g > path {
+  fill: #0ea5e9;
+  cursor:pointer;
+}
