--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,7 @@ body.d {
 }
 
 .muscle-svg:hover > g > path:first-child {
-  fill: #0ea5e9;
+  fill: rgba(14, 165, 233, .7);
   cursor:pointer;
 }
 
@@ -49,15 +49,21 @@ body.d {
 }
 
 .dark .muscle-highlighted > g > path:first-child {
-  fill: #0ea5e9;
+  fill: rgba(233, 215, 14, 0.7)
 }
 
 .dark .muscle-highlighted > g > path {
-  fill: #0ea5e9;
+  fill: rgba(233, 215, 14, 1)
+  /* fill: rgba(14, 233, 72, 1) */
+}
+
+.dark .muscle-svg:hover > g > path:first-child {
+  fill: rgba(14, 165, 233, .7);
+  cursor:pointer;
 }
 
 .dark .muscle-svg:hover > g > path {
-  fill: #0ea5e9;
+  fill: rgba(14, 165, 233, 1);
   cursor:pointer;
 }
 
