--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,3 +84,9 @@ body.d {
   -webkit-mask-position: bottom;
   mask-position: bottom;
 }
+
+.uline {
+  background: linear-gradient(to right, #F16A70, #F16A70) no-repeat;
+  background-size: 80% 3px;
+  background-position: left bottom;
+}
