Improved SVG looks and added code markup style.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,10 @@ body.d {
   fill: #7c7c7c;
 }
 
+.muscle-highlighted {
+  z-index: 10;
+}
+
 .dark .muscle-svg > g > path:first-child {
   fill: #2f2f2f;
 }
